--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
                 <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
                 <img src="./img/combo.png" alt="O Combo+ é a junção do Alura+ e o Alura liguas" class="container__imagem">
-                <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-                <a href="www.alura.com.br" class="container__botao botao__secundario">Assinar somente o Alura+</a>
+                <a href="https://www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+                <a href="https://www.alura.com.br" class="container__botao botao__secundario">Assinar somente o Alura+</a>
                 <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
 
 
@@ -71,7 +71,7 @@
 
 
                 <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+                <a href="https://www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
             </div>
             <img src="./img/Telas.png" alt="Tela da Alura+ e do Alura língua" class="secundario__imagem">
 
@@ -163,6 +163,7 @@
 
         
     </body>
+
 
 
 
